other/resource-creation-updation-denied/.chainsaw-test/resource2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: httpd2
  name: httpd2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd2
    spec:
      containers:
      - image: httpd
        name: httpd
        resources: {}
status: {}
